--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -88,5 +88,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_messages">MessagesActivity</string>
+    
+    <string name="pic_back">Back</string>
 
 </resources>
