--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -72,7 +72,6 @@
     <string name="send_message">Send Message</string>
     <string name="new_message">New Message</string>
 
-
     <!-- Options -->
     <string name="nflteam">NFL</string>
     <string name="fflteam">FL-Team</string>
@@ -84,11 +83,10 @@
     <string name="name">Name</string>
     <string name="score">Score</string>
     <string name="gameday">Gamedays</string>
-    <string name="domain">"http://test.dampsfootball.com"</string>
+    <string name="domain">"http://www.dampsfootball.com"</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_messages">MessagesActivity</string>
-    
     <string name="pic_back">Back</string>
 
 </resources>
