--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">DAMPS Fantasy</string>
 
     <!-- Startseite -->
-    <string name="main">DAMPS Fantasy</string>
+    <string name="main">DAMPs Fantasy</string>
     <string name="desc">DampsLogo</string>
     <string name="pic_log">Log</string>
     <string name="pic_opt">Options</string>
