--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="status">Status</string>
 
     <!-- Roster -->
-    <string name="team">Team</string>
+    <string name="team">NFL</string>
     <string name="pos">Pos</string>
     <string name="name">Name</string>
     <string name="score">Score</string>
