--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="starters">Starters</string>
     <string name="injuries">Injuries</string>
     <string name="forum">Forum</string>
-    <string name="teammanagement">Teammanagement</string>
+    <string name="teammanagement">Team Owner</string>
     <string name="exit">Beenden</string>
     <string name="options">Optionen</string>
     <string name="ok">OK</string>
@@ -92,5 +92,22 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_messages">MessagesActivity</string>
     <string name="pic_back">Back</string>
+    <string name="gd1">1.</string>
+    <string name="gd2">2.</string>
+    <string name="gd3">3.</string>
+    <string name="gd4">4.</string>
+    <string name="gd5">5.</string>
+    <string name="gd6">6.</string>
+    <string name="gd7">7.</string>
+    <string name="gd8">8.</string>
+    <string name="gd9">9.</string>
+    <string name="gd10">10.</string>
+    <string name="gd11">11.</string>
+    <string name="gd12">12.</string>
+    <string name="gd13">13.</string>
+    <string name="gd14">14.</string>
+    <string name="gd15">15.</string>
+    <string name="gd16">16.</string>
+    <string name="gd17">17.</string>
 
 </resources>
