--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -75,6 +75,12 @@
     <string name="pic_read">Read</string>
     <string name="subject">Subject:</string>
     <string name="mes">Message</string>
+    
+     <!-- Teammanagement -->
+    <string name="select">Select Starter</string>
+    <string name="releasePlayer">Release Player</string>
+    <string name="sign">Sign Free Agent</string>
+    <string name="trades">Open Trades</string>
 
     <!-- Options -->
     <string name="nflteam">NFL</string>
@@ -92,6 +98,9 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_messages">MessagesActivity</string>
     <string name="pic_back">Back</string>
+    <string name="half1">1st half of the season</string>
+    <string name="half2">2nd half of the season</string>
+    <string name="release">release</string>
     <string name="gd1">1.</string>
     <string name="gd2">2.</string>
     <string name="gd3">3.</string>
