--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -13,9 +13,7 @@
     <string name="scores">Scores</string>
     <string name="standings">Standings</string>
     <string name="starters">Starters</string>
-    <string name="injuries">Injuries</string>
     <string name="forum">Forum</string>
-    <string name="teammanagement">Team Owner</string>
     <string name="exit">Beenden</string>
     <string name="options">Optionen</string>
     <string name="ok">OK</string>
@@ -87,11 +85,8 @@
 
     <!-- Set Starter -->
     <string name="set_starters">Select Starter</string>
-    <string name="standard">Standard</string>
 
     <!-- Options -->
-    <string name="nflteam">NFL</string>
-    <string name="fflteam">FL-Team</string>
     <string name="status">Status</string>
 
     <!-- Roster -->
@@ -101,7 +96,6 @@
     <string name="score">Score</string>
     <string name="gameday">Gamedays</string>
     <string name="domain">"http://www.dampsfootball.com"</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_messages">MessagesActivity</string>
     <string name="pic_back">Back</string>
@@ -125,9 +119,20 @@
     <string name="gd15">15.</string>
     <string name="gd16">16.</string>
     <string name="gd17">17.</string>
+    
+    <!-- Sign Player -->
+    <string name="qb">QB</string>
+    <string name="rb">RB</string>
+    <string name="wr">WR</string>
+    <string name="te">TE</string>
+    <string name="k">K</string>
+    <string name="def">DEF</string>
 
     <!-- Tags -->
     <string name="start">start</string>
     <string name="kickoff">kickoff</string>
+    
+    <string name="search_hint">Search names</string>
+    
 
 </resources>
