--- a/Damps/res/values/strings.xml
+++ b/Damps/res/values/strings.xml
@@ -64,11 +64,7 @@
     <!-- Rosterstart -->
     <string name="teamwahl">Bitte Team wählen</string>
 
-    <!-- Headlines -->
-    <string name="posten">Posten</string>
-
     <!-- Messages -->
-    <string name="send_message">Send Message</string>
     <string name="new_message">New Message</string>
     <string name="pic_read">Read</string>
     <string name="subject">Subject:</string>
@@ -81,7 +77,7 @@
     <string name="sign">Sign Free Agent</string>
     <string name="open_trades">Open Trades</string>
     <string name="offer_trade">Offer Trade</string>
-    <string name="tradelist">Trade List</string>
+    <string name="tradelog">Tradelogs</string>
 
     <!-- Set Starter -->
     <string name="set_starters">Select Starter</string>
@@ -94,31 +90,10 @@
     <string name="pos">Pos</string>
     <string name="name">Name</string>
     <string name="score">Score</string>
-    <string name="gameday">Gamedays</string>
     <string name="domain">"http://www.dampsfootball.com"</string>
-    <string name="menu_settings">Settings</string>
-    <string name="title_activity_messages">MessagesActivity</string>
     <string name="pic_back">Back</string>
     <string name="half1">1st half of the season</string>
     <string name="half2">2nd half of the season</string>
-    <string name="release">release</string>
-    <string name="gd1">1.</string>
-    <string name="gd2">2.</string>
-    <string name="gd3">3.</string>
-    <string name="gd4">4.</string>
-    <string name="gd5">5.</string>
-    <string name="gd6">6.</string>
-    <string name="gd7">7.</string>
-    <string name="gd8">8.</string>
-    <string name="gd9">9.</string>
-    <string name="gd10">10.</string>
-    <string name="gd11">11.</string>
-    <string name="gd12">12.</string>
-    <string name="gd13">13.</string>
-    <string name="gd14">14.</string>
-    <string name="gd15">15.</string>
-    <string name="gd16">16.</string>
-    <string name="gd17">17.</string>
     
     <!-- Sign Player -->
     <string name="qb">QB</string>
@@ -127,9 +102,8 @@
     <string name="te">TE</string>
     <string name="k">K</string>
     <string name="def">DEF</string>
-
+	<string name="freespot">Kein freier Rosterspot.\n\nSpieler releasen um platz zu machen\n</string>
     <!-- Tags -->
-    <string name="start">start</string>
     <string name="kickoff">kickoff</string>
     
     <string name="search_hint">Search names</string>
